[package]
name = "terrain"
version = "0.1.0"
authors = ["Martin Risell Lilja <martin.risell.lilja@gmail.com>"]

[dependencies]
alga = "0.7"
nalgebra = "0.16"
#noise = { version = "0.5", default-features = false }
petgraph = "0.4"
rand = { version = "0.5", features = ["stdweb"] }
serde = "1.0"
serde_derive = "1.0"
stdweb = "0.4"
delaunator = "0.2"
criterion-plot = "0.2"

[dev-dependencies]
svg = "0.5"

[[example]]
name = "rivergen"

[profile.release]
lto = true
codegen-units = 1
